--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+/* list styling */
+.arr-functions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 li {
   display: flex;
   justify-content: space-between;
@@ -34,12 +42,17 @@ ul {
   min-width: 500px;
 }
 
-.btn-container {
+.btn-container,
+.sort-container {
   display: flex;
   flex-direction: column;
   position: absolute;
-  left: 105%;
+  left: 100%;
   min-width: 110px;
+}
+
+.sort-container {
+  left: 35% !important;
 }
 
 .App {
@@ -73,6 +86,15 @@ form {
   align-items: center;
   justify-content: center;
   margin: 1em;
+  position: absolute;
+  top: 100px;
+  right: 10%;
+}
+
+.modal form {
+  top: 0;
+  right: 0;
+  position: relative;
 }
 
 .form-group {
@@ -89,6 +111,10 @@ form {
 
 .form-group > input[type="text"] {
   width: 150px;
+}
+
+.search-input {
+  max-height: 20px;
 }
 
 
